# exemplo-py-uv

./: .gitattributes  .gitignore  LICENSE  docker-compose.yml  readme.md
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
backend/: Dockerfile  backend_pyproject.toml  main.py  pyproject.toml
frontend/: Dockerfile  frontend_pyproject.toml  main.py  pyproject.toml
